--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,13 +96,18 @@ heading {
 
 papertitle {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700
 }
 
 name {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 32px;
+}
+
+korname {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 26px;
 }
 
 .one {
